demo1-fundamentals/manifests/guestbook-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
    app.kubernetes.io/component: guestbook
    app.kubernetes.io/instance: guestbook
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/part-of: guestbook
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.12-ubi9
  annotations:
    app.openshift.io/vcs-uri: ${GIT_REPO}
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"guestbook:latest"},
        "fieldPath":"spec.template.spec.containers[?(@.name==\"guestbook\")].image","paused":false}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
        deployment: guestbook
    spec:
      containers:
        - name: guestbook
          image: image-registry.openshift-image-registry.svc:5000/demo-intro/guestbook:latest
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app: guestbook
    app.kubernetes.io/part-of: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook
  labels:
    app: guestbook
    app.kubernetes.io/part-of: guestbook
spec:
  to:
    kind: Service
    name: guestbook
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
